[package]
name = "cogwheel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29.0"
rand = "0.8.4"
csv = "1.1.6"

[[bin]]
name = 'example_basic'
path = 'src/bin/example_basic.rs'

[[bin]]
name = 'kaggle_titanic'
path = 'src/bin/kaggle_titanic.rs'
